<resources>
    <string name="app_name">OfflineTwo-180104044</string>
    <string name="textview">TextView</string>
    <string name="reminder" />
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="submit">submit</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="student_name">Student Name</string>
    <string name="optional_courses_taken">Optional Courses Taken</string>
    <string name="_120">120</string>
    <string name="a">A</string>
    <string name="hum">HUM</string>
    <string name="_131">131</string>
    <string name="x">X</string>
    <string name="vlsi">VLSI</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="todo">TODO</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="maybe">maybe</string>
</resources>
