<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_x="50px"
        android:layout_y="361px" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_x="119dp"
        android:layout_y="140dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_x="226dp"
        android:layout_y="138dp"
        android:text="@string/maybe" />

</AbsoluteLayout>